# YZTA-Bootcamp-Grup-83

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/: AGENTS.md
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  error_handlers.py  health.py  rate_limit.py
backend/app/api/routers/: auth.py  dashboard.py  knowledge.py  records.py  sessions.py  tasks.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: api_envelope.py  auth.py  enums.py  methodology.py  problem_record.py  validation.py
backend/app/infrastructure/: celery_app.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/db/: base.py  models.py  session.py
backend/app/infrastructure/llm/: gemini_client.py
backend/app/services/: agent_service.py  audit_service.py  auth_service.py  embedding_pipeline.py  embedding_service.py  knowledge_service.py  llm_service.py  obsidian_service.py  rag_service.py  session_service.py  tasks.py
backend/tests/: test_api.py  test_auth.py  test_domain_models.py  test_embedding_pipeline.py  test_embedding_service.py  test_health.py  test_knowledge_service.py  test_llm_service.py  test_methodology_engines.py  test_qdrant_repository.py  test_rag_service.py  test_rate_limit.py  test_repositories.py  test_session_service.py
backend/tests/fakes/: fake_cache.py  fake_gemini_client.py  fake_qdrant_repository.py  fake_redis_counter.py
(+40 files in other folders)
