[project]
name = "proby-ai-backend"
version = "0.1.0"
description = "Proby AI - kurumsal problem cozme ve bilgi yonetimi platformu backend'i"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
